<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_upcoming"
        android:iconTint="@color/white"
        android:icon="@drawable/baseline_upcoming_24"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_home"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_finished"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_finished_24"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_setting"
        android:iconTint="@color/white"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/action_settings" />

</menu>