<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_clear_24"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/action_favorite"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:clickable="true"
                android:contentDescription="@string/bookmark"
                android:focusable="true"
                android:src="@drawable/baseline_favorite_border_24"
                app:tint="@color/light_pink"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:paddingEnd="10dp"
                android:text="@string/Favorite"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="#E91E63"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ownername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ownername" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/sisaKuota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:text="@string/kuota"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap,TextContrastCheck" />

                <TextView
                    android:id="@+id/beginTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:text="@string/beginTime"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deskripsi"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/contoh_desc"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fab_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:icon="@drawable/baseline_calendar_month_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/white"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="bottom|center"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_anchor="@+id/nested_scroll_view"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>